Update readme.md, package.json and add default args to component

--- a/package.json
+++ b/package.json
@@ -1,7 +1,8 @@
 {
   "name": "react-adinkra",
-  "version": "0.1.0",
+  "version": "1.0.0",
   "main": "lib/index.js",
+  "description": "React Component for the adinkra library",
   "dependencies": {
     "autoprefixer": "7.1.2",
     "babel-core": "6.25.0",
@@ -94,5 +95,6 @@
     "babel-preset-react": "^6.24.1",
     "babel-preset-stage-0": "^6.24.1"
   },
-  "author": "Jacob Evans"
+  "author": "Jacob Evans",
+  "license": "Apache-2.0"
 }
